# rust-ootr-utils

./: Cargo.toml  LICENSE  README.md
assets/: pre-commit.ps1
src/: camc.rs  lib.rs  spoiler.rs
