[package]
name = "ootr-utils"
version = "0.6.3"
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
async-proto = { version = "0.26", features = ["semver"] }
cargo_metadata = "0.22"
dir-lock = "0.5"
directories = "6"
enum-iterator = "2"
gix = "0.73"
itertools = "0.14"
lazy-regex = "3"
semver = "1.0.16"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_plain = "1.0.1"
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio-rustls"] }
thiserror = "2"
tokio = { version = "1.25.0", features = ["parking_lot", "process"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "std"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
which = "8"

[target."cfg(unix)".dependencies]
xdg = "3"
